--- a/sportWeb.css
+++ b/sportWeb.css
@@ -3,13 +3,13 @@
   
     /*coupon*/
     .tg_widget_bg_2, .tg--cashout-body, .tg__cashout_popup{
-        background-color: #000000;
+        background-color: #2f2f2f;
         color: #cccccc;
     }
     .stake_item_panel{
-      background-color: #000000;
+      background-color: #414141;
       color: #cccccc;
-      border-color: #000000;
+      border-color: #2f2f2f;
     }
     .coupon_sport_name_container{
       color: #fff;
@@ -17,35 +17,35 @@
     /*input inside widgetBg3*/
     .tg_widget_bg_2 .tg_input,
     .tg_widget_bg_2 .tg__dropdown_coupon{
-      background-color: #000000;
+      background-color: #414141;
       color: #cccccc;
     }
     .tg__btn-coupon{
       background-color: #cccccc;
-      color: #000000;
+      color: #2f2f2f;
     }
     .tg__btn-coupon:hover{
       background-color: #fff;
-      color: #000000;
+      color: #2f2f2f;
     }
     .tab_cupon{
-      background-color: #000000;
+      background-color: #414141;
       color: #cccccc;
     }
     .tab_cupon.tab_selected,
     .tab_cupon:hover {
-      background-color: #000000;
+      background-color: #2f2f2f;
       color: #fff;
     }
     .tg__coupon_factor,
     .tg__coupon_square{
-      background-color: #000000;
+      background-color: #2f2f2f;
       color: #fff;
     }
   
     /*input inside widgetBg*/
     .tg_widget_bg .tg_input{
-      background-color: #000000;
+      background-color: #3e3e3e;
       color: #cccccc;
     }
     /*mainBg*/
@@ -53,15 +53,15 @@
     .tg__modal_close,
     .tg--close,
     .tg__info_panel .selector_panel {
-        background-color: #f31212;
+        background-color: #161616;
         color: #fff;
     }
     .tg__live_filter_item.checked{
-      background-color: #000000;
+      background-color: #2f2f2f;
       color: #fff;
     }
     .gameContentTitle.tg_widget_header{
-      background-color: #0d345e;
+      background-color: #653434;
       color: #fff;
     }
     .gameContentTitle.tg_widget_header .tg-ico-arrow{
@@ -69,39 +69,39 @@
     }
   
     .tg_widget_heading{
-        background-color: #000000;
+        background-color: #3e3e3e;
         color: #fff;
     }
   
       /*sidebar*/
     .tg_sidebar_bg{
-      background-color:#000000;
+      background-color:#2f2f2f;
     }
     .tg__left_menu_item{
-      background-color:#000000;
+      background-color:#2f2f2f;
       color:#fff;
     }
     .tg__left_menu_item:hover{
-      background:#000000;
+      background:#343434;
     }
     .tg_sidebar_bg_2{
-      background-color: #000000;
+      background-color: #3e3e3e;
       color: #fff;
     }
     .tg_sidebar_bg_2:hover{
-      background-color: #000000;
+      background-color: #414141;
     }
     .tg_sidebar_bg_3{
-      background-color: #000000;
+      background-color: #464646;
       color: #fff;
     }
     .tg_sidebar_bg_3:hover{
-      background-color: #000000;
+      background-color: #343434;
     }
     .tg__left_menu_item.tg__left_menu_item-active,
     .tg_sidebar_bg_3.left_menu_line_active,
     .liveGameSelected .tg_sidebar_bg_3{
-      background:linear-gradient(0deg, #ffb700 0%, #f14100 100%);;
+      background:#ffb700;
       color:#000;
     }
     .tg__left_menu_item.tg__left_menu_item-active .tg_sidebar_text_akcent,
@@ -121,7 +121,7 @@
     .sportHeaderPaneUpperRow,
     .sportHeaderPaneLowerRow,
     .tg__footer {
-      background-color: #000000;
+      background-color: #2f2f2f;
       color: #fff;
     }
     .tg__coupon_tabs_cont {
@@ -155,16 +155,16 @@
     
     .tg__submenu__item{
       padding: 0 8px;
-      background: #000000;
+      background: #2f2f2f;
       color: #fff;
       height: 36px;
       line-height: 36px;
-      border-radius: undefinedpx;
+      border-radius: 99px;
     }
     .tg__submenu__item.active,
     .tg__submenu__item:hover{
-      background: undefined;
-      color: undefined;
+      background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
+      color: #fff;
     }
     
     .tg_team_name,
@@ -172,15 +172,15 @@
       color: #cccccc;
     }
     .tab_selector{
-        background-color: #f31212;
+        background-color: #161616;
         color: #cccccc;
     }
     
     .ss__step_slider .ss__ruller > div.off{
-      background-color: #f31212;
+      background-color: #161616;
     }
     #line_tabs .selectorWrapper, #live_tabs_header .selectorWrapper{
-        background-color: #f31212;
+        background-color: #161616;
     }
   
     .tg__banner__heading,
@@ -191,30 +191,30 @@
     
     .tab_selector.tab_selector_active,
     .tab_selector:hover{
-      background: #ffb700;
-      color: #000;
+      background: #2f2f2f;
+      color: #fff;
     }
     
     .tg__step_slider,
     .tg_widget_bg,
     .tg_subheader_btn{
-      background-color: #000000;
+      background-color: #2f2f2f;
       color: #cccccc;
     }
     
     .tg_widget_row {
-          border-bottom: 1px solid #f31212;
+          border-bottom: 1px solid #161616;
     }
     .tg__match_item_stake,
     .tg--pos_comb_row,
     .tg__coupon_switches .tg__switch_cont,
     .tg--border-bot-1{
-        border-color: #f31212;
+        border-color: #161616;
     }
   
     /*sidebar*/
     .tg_sidebar_bg_2.tg__step_slider{
-        background-color: #000000;
+        background-color: #3e3e3e;
         color: #fff;
     }
     .ss__step_slider .ss__slider,
@@ -223,11 +223,11 @@
     }
   
     .tg_widget_header{
-      background-color: #ffb700;
-      color: #000;
+      background-color: #2f2f2f;
+      color: #fff;
     }
     .tg_widget_header .tg-ico-arrow{
-      color: #000;
+      color: #fff;
     }
   
     .tg_widget_sub_row,
@@ -238,14 +238,14 @@
     .posCombItem,
     .tg__slider__btn:hover,
     #calc_new .tg__btn {
-          background-color: #000000;
+          background-color: #3e3e3e;
           color: #cccccc;
     }
     .tg_input_coupon_amount{
       color:#fff;
     }
     .tg__dropdown__item{
-      border-bottom:1px solid #f31212;
+      border-bottom:1px solid #161616;
       margin-bottom:0;
     }
     .tg__dropdown__item:hover,
@@ -253,11 +253,11 @@
       color:#fff;
     }
     .tg__dropdown_content{
-        background-color: #000000;
+        background-color: #3e3e3e;
           color: #cccccc;
     }
     .tg__subhead .tg__dropdown_value {
-        background-color: #000000;
+        background-color: #2f2f2f;
     }
     .tg__input,
     .tg_input,
@@ -276,14 +276,14 @@
       color: #fff;
     }
     .tg__score_box{
-        background-color: #f31212;
+        background-color: #161616;
     }
     .tg__more{
-      background-color: #1cc610;
+      background-color: #161616;
       color: #fff;
     }
     .tg__more:hover{
-        background-color: #1cc610;
+        background-color: #161616;
         color: #ffb700;
     }
     .tg_widget_header_2, .tg--cashout-row,
@@ -298,74 +298,74 @@
     .tg__calendar_header.tg_widget_heading,
     .tg__results_header.tg_widget_bg      
      {
-        background-color: #ffb700;
-        color: #000;
+        background-color: #2f2f2f;
+        color: #fff;
      }
      .tg__multiview_header.tg_widget_header .tg__one_game_team{
-      color: #000;
+      color: #fff;
      }
   
      .tg_widget_header_2 .tab_selector_active{
-        background: #ffb700 !important;
-        color: #000 !important;
+        background: #2f2f2f !important;
+        color: #fff !important;
      }
     .l_od,
     .l_od_empty{
-          background-color: #3345cc;
+          background-color: #902727;
           color: #fff;
     }
     .l_od:hover,
     .odCnt:hover .l_od,
     .l_od.selectedOdd, .tg--cashout-item-cashout, .tg--cashout-pagination-item.active{
-      background: undefined;
-      color: undefined;
+      background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
+      color: #fff;
     }
     .tab_selector.tab_selector_active .tg__badge_live{
       background-color: #CB0000;
       color: #fff;
     }
     .tab_selector .tg__badge_live{
-      background-color: #000000;
+      background-color: #2f2f2f;
       color: #cccccc;
     }
     .tg_widget_tab_text,
     .tg__srv{
-      color: undefined;
+      color: #542a1c;
     }
     .tg__fix_btn{
-      color: #000;
+      color: #fff;
     }
     .tg_widget_bg_2 .selectorWrapper .tg__fix_btn{
-      color: #000;
+      color: #fff;
     }
     .tg_widget_bg_2 .tg__fix_btn{
       color: #fff;
     }
     .tg_widget_bg_2 .tg__dropdown_value{
-      background-color: #000000;
+      background-color: #414141;
       color: #fff;
     }
     .tg_widget_text_akcent{
       color: #ffb700;
     }
     .tg__fix_btn.checked{
-      color: #000;
+      color: #fff;
     }
      .tg_widget_bg .tg-ico.active{
       color: #ffb700 !important;
      }
     #calc_new .tg__btn-ternary,
     .tg__btn-ternary{
-      background: undefined;
-      color: undefined;
+      background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
+      color: #fff;
     }
     .tg_widget_bg .tg__btn .tg-ico{
-      color: undefined;
+      color: #fff;
     }
     #calc_new .tg__btn-ternary:hover,
     .tg__btn-ternary:hover{
       background-color: undefined;
-      color: undefined;
+      color: #fff;
     }
     .digi_scroll_dragger{
       background-color: #ffb700;
@@ -380,45 +380,45 @@
       background-color: undefined;
     }
     .tg__switch .tg__switch_ico{
-      background-color: #f31212;
+      background-color: #161616;
     }
     .tg__switch .tg__switch_ico:before{
-      background-color: #000000;
+      background-color: #2f2f2f;
     }
     .tg__switch input:checked + .tg__switch_ico:before{
-      background: undefined;
+      background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
     }
     /*calendar*/
     .ui-widgetBg-content {
       border: none;
-      background: #000000;
+      background: #3e3e3e;
       color: #cccccc;
     }
     .ui-widgetBg-header {
       border: none;
-      background: #000000;
+      background: #3e3e3e;
       color: #cccccc;
     }
     .ui-state-default, .ui-widgetBg-content .ui-state-default, .ui-widgetBg-header .ui-state-default {
       border: none;
-      background: #000000;
+      background: #464646;
       color: #cccccc;
     }
     .ui-state-highlight, .ui-widgetBg-content .ui-state-highlight, .ui-widgetBg-header .ui-state-highlight {
       border: none;
-      background: undefined;
-      color: undefined;
+      background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
+      color: #fff;
     }
     .ui-state-active, .ui-widgetBg-content .ui-state-active, .ui-widgetBg-header .ui-state-active {
       border: none;
       background-color: undefined;
-      color: undefined;
+      color: #fff;
     }
     /*calendar end*/
      
     /*border radius (roundness)*/
     .tab_selector_active, .tab_selector:hover{
-        border-radius: undefinedpx undefinedpx 0 0;
+        border-radius: 99px 99px 0 0;
     }
     .tg__btn,
     .l_od_empty,
@@ -427,7 +427,7 @@
     .tg__dropdown_content,
     .tg__input,
     .tg_input{
-      border-radius: undefinedpx;
+      border-radius: 99px;
     }
   
     @keyframes lightbox {
@@ -436,7 +436,7 @@
       }
   
       to {
-          color: undefined
+          color: #542a1c
       }
     }
   
@@ -446,26 +446,26 @@
       font-family: TotoFont;
       font-size: 38px;
       line-height: 16px;
-      color: undefined
+      color: #542a1c
     }
   
     .tg_coin {
-      background: undefined;
-      color: undefined;
+      background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
+      color: #fff;
     }
     
     .tg__match_item_btn {
-        background-color: #f31212;
+        background-color: #161616;
         color: #fff;
     }
     
     .overviewEventSlider .tg__btn_arrow {
-      background-color: #ffb700;
-      color: #000;
+      background-color: #2f2f2f;
+      color: #fff;
     }
     
     .sportLeftPane .liveFilterContainer{
-      background-color: #f31212;
+      background-color: #161616;
       color: #fff;
     }
   
@@ -480,47 +480,47 @@
       color: #ffb700;
     }
     .tg__bet_history .tg__list_row.tg_sticky_bot {
-      background-color: #f31212;
+      background-color: #161616;
     }
     
       /* book a bet skinning */
     .tg__modal_book_bet {
         top: 150px;
-        background-color: #000000;
+        background-color: #2f2f2f;
         color: #cccccc;
     }
     .tg__modal_book_bet .tg__modal_header{
-        background-color: #ffb700;
-        color: #000;
+        background-color: #2f2f2f;
+        color: #fff;
     }
     .tg__modal_book_bet .tg__list_bg{
-        background-color: #f31212;
+        background-color: #161616;
     }
     .tg__modal_book_bet .tg__list_row {
-        background-color: #000000;
+        background-color: #3e3e3e;
     }
     .tg__modal_book_bet .tg__list_row:nth-child(even) {
-        background-color: #000000;
+        background-color: #2f2f2f;
     }
     .tg__modal_book_bet .tg__border--color-akcent{
-        border-color: undefined;
+        border-color: #542a1c;
     }
     .tg__modal_book_bet .tg-clr-akcent{
-        color: undefined;
+        color: #542a1c;
     }
     
      /* Right banner styles */
     .tg__custom_rightBanner_line,
     .tg__custom_rightBanner_desc {
-        border-top-color: undefined;
+        border-top-color: #542a1c;
     }
     .tg__rightBanner_seeMore {
-       background: undefined;
-       color: undefined;
+       background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
+       color: #fff;
     }
   
     .component_tax_data {
-      background-color: #f31212;
+      background-color: #161616;
       color: #cccccc;
     }
     .component_tax_data .tg-ico {
@@ -531,7 +531,7 @@
     }
     
     .tg__show_title[data-title]:hover:after {
-      background-color: #f31212;
+      background-color: #161616;
       color: #fff;
     }
   
@@ -541,7 +541,7 @@
     }
   
     .tg__coupon_switches {
-      border-bottom: 1px solid #f31212;
+      border-bottom: 1px solid #161616;
     }
   
   
@@ -552,7 +552,7 @@
       .paperView .es__home_bet_header,
       .paperView .es__live_page .es__text_heading,
       .paperView .es__event_detail_header {
-          background: #0d345e;
+          background: #653434;
           color: #fff;
       }
   
@@ -571,7 +571,7 @@
       .paperView .es__home_bet_item .es__home_tab,
       .paperView .es__home_bet_item .tab_selector,
       .paperView .live_tabs_header .selectorWrapper {
-          background: #000000;
+          background: #2f2f2f;
           color: #fff;
       }
   
@@ -581,23 +581,23 @@
       .paperView .es__home_bet_item .es__event_subhead,
       .paperView .es__paper_name,
       .paperView .es__filter_container {
-          background: #000000;
+          background: #3e3e3e;
           color: #fff;
       }
   
       .paperView .es__filter_container .tg__dropdown_value{
-        background: #000000;
+        background: #343434;
         color: #fff;
       }
   
       .paperView .es__event_subhead,
       .paperView .es--live_tabular_sub_row {
-          background: #000000;
+          background: #3e3e3e;
           color: #cccccc;
       }
   
       .paperView .es__home_one_game_header{
-         background: #000000;
+         background: #3e3e3e;
          color: #fff;
       }
   
@@ -608,7 +608,7 @@
       .paperView .es__paper_name,
       .paperView .es__header_with_border,
       .paperView .es__event_sub_row {
-          background: #000000;
+          background: #464646;
           color: #cccccc;
       }
   
@@ -623,14 +623,14 @@
       .paperView .es--live_sport_row_cont,
       .paperView .es__filter_container,
       .paperView .paper_home_games_wrapper > div > div + div {
-          border-color: #f31212;
+          border-color: #161616;
       }
   
       /*paper view odds*/
       .paperView .component_odd_empty,
       .paperView .component_odd,
       .paperView .component_odd.selectedOdd{
-          background-color: #3345cc;
+          background-color: #902727;
           color: #fff;
       }
       .paperView .component_odd:hover,
@@ -638,20 +638,20 @@
       .paperView .EUodds:hover,
       .paperView .EUodds.selectedOdd,
       .paperView .component_odd.selectedOdd {
-          background: undefined;
-          color: undefined;
+          background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
+          color: #fff;
       }
   
       .paperView .es__show_more_btn .tg__chb_text {
-        background: undefined;
-        color: undefined;
+        background: linear-gradient(0deg, #542a1c 0%, #ffb700 100%);;
+        color: #fff;
         height: 36px;
         line-height: 36px;
-        border-radius: undefinedpx;
+        border-radius: 99px;
       }
       .paperView .es__show_more_btn .tg__chb_text:hover {
         background: undefined;
-        color: undefined;
+        color: #fff;
       }
   
   
