--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    background: #424242;
+    box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
 }
 
 .nik_skinner_link{
